cmake_minimum_required(VERSION 3.7)
project(unpv13e)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        advio/old/dgechoaddr.c
        advio/old/recvfromflags.c
        advio/old/test01.c
        advio/daytimetcpcli.c
        advio/daytimeudpcli3.c
        advio/daytimeudpcli4.c
        advio/dgclitimeo.c
        advio/dgclitimeo1.c
        advio/dgclitimeo2.c
        advio/dgclitimeo2.lc
        advio/dgclitimeo3.c
        advio/dgclitimeo3.lc
        advio/dgechoaddr.c
        advio/dgechoaddr.lc
        advio/Makefile
        advio/recvfromflags.c
        advio/recvfromflags.lc
        advio/script.1
        advio/sig_chld_waitpid.c
        advio/str_cli_kqueue04.c
        advio/str_cli_poll03.c
        advio/str_cli_select02.c
        advio/str_echo_stdio02.c
        advio/str_echo_stdio02.lc
        advio/tcpcli01.c
        advio/tcpcli02.c
        advio/tcpcli03.c
        advio/tcpcli04.c
        advio/tcpserv02.c
        advio/udpcli01.c
        advio/udpcli02.c
        advio/udpcli03.c
        advio/udpserv01.c
        advio/udpserv03.c
        advio/udpserv03.lc
        advio/udpserv04.c
        advio/udpserv04.lc
        bcast/dgclibcast1.c
        bcast/dgclibcast1.lc
        bcast/dgclibcast2.c
        bcast/dgclibcast3.c
        bcast/dgclibcast3.lc
        bcast/dgclibcast4.c
        bcast/dgclibcast4.lc
        bcast/dgclibcast5.c
        bcast/dgclibcast5.lc
        bcast/dgclibcast6.c
        bcast/dgclibcast6.lc
        bcast/Makefile
        bcast/udpcli01.c
        bcast/udpcli02.c
        bcast/udpcli03.c
        bcast/udpcli04.c
        bcast/udpcli05.c
        bcast/udpcli06.c
        debug/backlog.c
        debug/backlog.lc
        debug/Makefile
        debug/qlen.c
        debug/qlen.lc
        debug/test01.c
        debug/test01.lc
        debug/test02.c
        debug/test03.c
        debug/test04.c
        debug/test05.c
        debug/test06.c
        debug/unpxti.h
        icmpd/dgcli01.c
        icmpd/dgcli01.lc
        icmpd/icmpd.c
        icmpd/icmpd.h
        icmpd/icmpd.lc
        icmpd/Makefile
        icmpd/readable_conn.c
        icmpd/readable_conn.lc
        icmpd/readable_listen.c
        icmpd/readable_listen.lc
        icmpd/readable_v4.c
        icmpd/readable_v4.lc
        icmpd/readable_v6.c
        icmpd/readable_v6.lc
        icmpd/script.1
        icmpd/script.2
        icmpd/script.3
        icmpd/script.4
        icmpd/udpcli01.c
        icmpd/unpicmpd.h
        inetd/daytimetcpsrv2.c
        inetd/daytimetcpsrv3.c
        inetd/daytimetcpsrv3.lc
        inetd/Makefile
        intro/byteorder.c
        intro/daytimetcpcli
        intro/daytimetcpcli.c
        intro/daytimetcpcli.o
        intro/daytimetcpcli1.c
        intro/daytimetcpcli2.c
        intro/daytimetcpcli3.c
        intro/daytimetcpcliv6.c
        intro/daytimetcpsrv
        intro/daytimetcpsrv.c
        intro/daytimetcpsrv.lc
        intro/daytimetcpsrv.o
        intro/daytimetcpsrv1.c
        intro/daytimetcpsrv2.c
        intro/daytimetcpsrv3.c
        intro/daytimetcpsrvv6.c
        intro/Makefile
        intro/truss.solaris.2.6
        intro/truss.unixware.2.1
        ioctl/lsif01.c
        ioctl/lsif02.c
        ioctl/Makefile
        ioctl/prifinfo.c
        ioctl/prifinfo.lc
        ioctl/prmac.c
        ioctl/Progs.siocgifconf
        ioctl/Script.solaris
        ioctl/test1.c
        ipopts/dgechoprintroute.c
        ipopts/Makefile
        ipopts/sigchldwaitpid.c
        ipopts/sourceroute.c
        ipopts/sourceroute.lc
        ipopts/sourceroute6.c
        ipopts/tcpcli01.c
        ipopts/tcpserv01.c
        ipopts/udpcli01.c
        ipopts/udpserv01.c
        key/add.c
        key/dump.c
        key/Makefile
        key/name.c
        key/printsadbmsg.c
        key/register.c
        key/unp.h
        lib/addrinfo.h
        lib/connect_nonb.c
        lib/connect_nonb.lc
        lib/connect_nonb.o
        lib/connect_timeo.c
        lib/connect_timeo.lc
        lib/connect_timeo.o
        lib/daemon_inetd.c
        lib/daemon_inetd.lc
        lib/daemon_inetd.o
        lib/daemon_init.c
        lib/daemon_init.o
        lib/dg_cli.c
        lib/dg_cli.o
        lib/dg_echo.c
        lib/dg_echo.o
        lib/error.c
        lib/error.o
        lib/family_to_level.c
        lib/family_to_level.o
        lib/get_ifi_info.c
        lib/get_ifi_info.lc
        lib/get_ifi_info.o
        lib/gf_time.c
        lib/gf_time.o
        lib/host_serv.c
        lib/host_serv.lc
        lib/host_serv.o
        lib/hstrerror.c
        lib/if_indextoname.c
        lib/if_nameindex.c
        lib/if_nametoindex.c
        lib/in6addr_any.c
        lib/Makefile
        lib/mcast_get_if.c
        lib/mcast_get_if.o
        lib/mcast_get_loop.c
        lib/mcast_get_loop.o
        lib/mcast_get_ttl.c
        lib/mcast_get_ttl.o
        lib/mcast_join.c
        lib/mcast_join.lc
        lib/mcast_join.o
        lib/mcast_leave.c
        lib/mcast_leave.o
        lib/mcast_set_if.c
        lib/mcast_set_if.o
        lib/mcast_set_loop.c
        lib/mcast_set_loop.lc
        lib/mcast_set_loop.o
        lib/mcast_set_ttl.c
        lib/mcast_set_ttl.o
        lib/my_addrs.c
        lib/my_addrs.lc
        lib/my_addrs.o
        lib/pselect.c
        lib/pselect.lc
        lib/read_fd.c
        lib/read_fd.lc
        lib/read_fd.o
        lib/readable_timeo.c
        lib/readable_timeo.lc
        lib/readable_timeo.o
        lib/readline.c
        lib/readline.lc
        lib/readline.o
        lib/readn.c
        lib/readn.lc
        lib/readn.o
        lib/rtt.c
        lib/rtt.lc
        lib/rtt.o
        lib/signal.c
        lib/signal.lc
        lib/signal.o
        lib/signal_intr.c
        lib/signal_intr.o
        lib/snprintf.c
        lib/sock_bind_wild.c
        lib/sock_bind_wild.o
        lib/sock_cmp_addr.c
        lib/sock_cmp_addr.o
        lib/sock_cmp_port.c
        lib/sock_cmp_port.o
        lib/sock_get_port.c
        lib/sock_get_port.o
        lib/sock_ntop.c
        lib/sock_ntop.lc
        lib/sock_ntop.o
        lib/sock_ntop_host.c
        lib/sock_ntop_host.o
        lib/sock_set_addr.c
        lib/sock_set_addr.o
        lib/sock_set_port.c
        lib/sock_set_port.o
        lib/sock_set_wild.c
        lib/sock_set_wild.o
        lib/sockatmark.c
        lib/sockfd_to_family.c
        lib/sockfd_to_family.lc
        lib/sockfd_to_family.o
        lib/str_cli.c
        lib/str_cli.lc
        lib/str_cli.o
        lib/str_echo.c
        lib/str_echo.lc
        lib/str_echo.o
        lib/tcp_connect.c
        lib/tcp_connect.lc
        lib/tcp_connect.o
        lib/tcp_listen.c
        lib/tcp_listen.lc
        lib/tcp_listen.o
        lib/tv_sub.c
        lib/tv_sub.o
        lib/udp_client.c
        lib/udp_client.lc
        lib/udp_client.o
        lib/udp_connect.c
        lib/udp_connect.lc
        lib/udp_connect.o
        lib/udp_server.c
        lib/udp_server.lc
        lib/udp_server.o
        lib/unp.h
        lib/unp.lh
        lib/unpifi.h
        lib/unprtt.h
        lib/unprtt.lh
        lib/unpthread.h
        lib/wraplib.c
        lib/wraplib.o
        lib/wrappthread.c
        lib/wrappthread.lc
        lib/wrappthread.o
        lib/wrapsock.c
        lib/wrapsock.lc
        lib/wrapsock.o
        lib/wrapstdio.c
        lib/wrapstdio.o
        lib/wrapunix.c
        lib/wrapunix.o
        lib/writable_timeo.c
        lib/writable_timeo.o
        lib/write_fd.c
        lib/write_fd.lc
        lib/write_fd.o
        lib/writen.c
        lib/writen.lc
        lib/writen.o
        libfree/addrinfo.h
        libfree/getaddrinfo.c
        libfree/getnameinfo.c
        libfree/in_cksum.c
        libfree/in_cksum.o
        libfree/inet_aton.c
        libfree/inet_ntop.c
        libfree/inet_ntop.o
        libfree/inet_ntop_ipv4.c
        libfree/inet_ntop_ipv4.lc
        libfree/inet_pton.c
        libfree/inet_pton.o
        libfree/inet_pton_ipv4.c
        libfree/inet_pton_ipv4.lc
        libfree/Make.tar
        libfree/Makefile
        libfree/README
        libfree/README.getaddrinfo
        libfree/test_ascii2addr.c
        libfree/test_getservbyname_r.c
        libfree/test_inet_pton.c
        libgai/old/ga_unixstruct.c
        libgai/old/savecopy.c
        libgai/addrinfo.h
        libgai/freeaddrinfo.c
        libgai/ga_aistruct.c
        libgai/ga_aistruct.lc
        libgai/ga_clone.c
        libgai/ga_clone.lc
        libgai/ga_echeck.c
        libgai/ga_echeck.lc
        libgai/ga_nsearch.c
        libgai/ga_nsearch.lc
        libgai/ga_port.c
        libgai/ga_port.lc
        libgai/ga_serv.c
        libgai/ga_serv.lc
        libgai/ga_unix.c
        libgai/ga_unix.lc
        libgai/gai_hdr.h
        libgai/gai_hdr.lh
        libgai/gai_strerror.c
        libgai/getaddrinfo.c
        libgai/getaddrinfo.lc
        libgai/getnameinfo.c
        libgai/getnameinfo.lc
        libgai/gn_ipv46.c
        libgai/gn_ipv46.lc
        libgai/Makefile
        libgai/test1.c
        libgai/testga.c
        libroute/get_rtaddrs.c
        libroute/get_rtaddrs.lc
        libroute/if_indextoname.c
        libroute/if_indextoname.lc
        libroute/if_nameindex.c
        libroute/if_nameindex.lc
        libroute/if_nametoindex.c
        libroute/if_nametoindex.lc
        libroute/Makefile
        libroute/net_rt_dump.c
        libroute/net_rt_iflist.c
        libroute/net_rt_iflist.lc
        libroute/sock_masktop.c
        libroute/unproute.h
        mcast/dgclibcast1.c
        mcast/dgclimcast5.c
        mcast/dgclimcast6.c
        mcast/main.c
        mcast/Makefile
        mcast/recv.c
        mcast/send.c
        mcast/udpcli01.c
        mcast/udpcli05.c
        mcast/udpcli06.c
        mcast/udpserv01.c
        mysdr/loop.c
        mysdr/loop.lc
        mysdr/main.c
        mysdr/main.lc
        mysdr/Makefile
        mysdr/mysdr.h
        mysdr/script.1
        mysdr/script.2
        names/daytimetcpcli.c
        names/daytimetcpcli1.c
        names/daytimetcpcli1.lc
        names/daytimetcpcli2.c
        names/daytimetcpcli2.lc
        names/daytimetcpcli3.c
        names/daytimetcpcli3.lc
        names/daytimetcpsrv1.c
        names/daytimetcpsrv2.c
        names/daytimetcpsrv3.c
        names/daytimetcpsrv4.c
        names/daytimeudpcli1.c
        names/daytimeudpcli1.lc
        names/daytimeudpcli2.c
        names/daytimeudpsrv2.c
        names/daytimeudpsrv3.c
        names/hostent.c
        names/hostent.lc
        names/hostent2.c
        names/hostent2.lc
        names/hostent3.c
        names/Makefile
        names/myaddrs1.c
        names/myaddrs1.lc
        names/netent.c
        names/prmyaddrs.c
        names/prmyaddrs1.c
        names/prmyaddrs1.lc
        names/test1.c
        names/test2.c
        names/udp_server_reuseaddr.c
        nonblock/daytimetcpcli.c
        nonblock/doit.1
        nonblock/home_page.c
        nonblock/Makefile
        nonblock/script.1.sh
        nonblock/script.1.tcpd
        nonblock/start_connect.c
        nonblock/strclifork.c
        nonblock/strclinonb.c
        nonblock/strclinonb.lc
        nonblock/tcpcli01.c
        nonblock/tcpcli02.c
        nonblock/tcpcli03.c
        nonblock/tcpcli03.lc
        nonblock/tcpcli04.c
        nonblock/tcpservselect03.c
        nonblock/web.c
        nonblock/web.h
        nonblock/web.lc
        nonblock/write_get_cmd.c
        oob/heartbeatcli.c
        oob/heartbeatserv.c
        oob/Makefile
        oob/sigchldwaitpid.c
        oob/strcliselect02.c
        oob/strecho02.c
        oob/tcpcli02.c
        oob/tcprecv01.c
        oob/tcprecv01.lc
        oob/tcprecv02.c
        oob/tcprecv02.lc
        oob/tcprecv03.c
        oob/tcprecv03p.c
        oob/tcprecv03p.lc
        oob/tcprecv04.c
        oob/tcprecv04.lc
        oob/tcprecv05.c
        oob/tcprecv06.c
        oob/tcpsend01.c
        oob/tcpsend01.lc
        oob/tcpsend02.c
        oob/tcpsend03.c
        oob/tcpsend04.c
        oob/tcpsend04.lc
        oob/tcpsend05.c
        oob/tcpsend05.lc
        oob/tcpsend06.c
        oob/tcpsend06.lc
        oob/tcpserv02.c
        ping/old/icmp6.h
        ping/old/ip6.h
        ping/bsdping.c
        ping/init_v6.c
        ping/main.c
        ping/main.lc
        ping/Makefile
        ping/ping.h
        ping/ping_v4.c
        ping/proc_v4.c
        ping/proc_v4.lc
        ping/proc_v6.c
        ping/proc_v6.lc
        ping/readloop.c
        ping/send_v4.c
        ping/send_v6.c
        ping/sig_alrm.c
        ping/sig_alrm.lc
        ping/tv_sub.c
        route/checkudpsum.c
        route/get_ifi_info.c
        route/get_ifi_info.lc
        route/getrt.c
        route/getrt.lc
        route/Makefile
        route/mynetstat.c
        route/prifindex.c
        route/prifinfo.c
        route/prifname.c
        route/prifnameindex.c
        route/unproute.h
        rtt/dg_cli.c
        rtt/dg_cli.lc
        rtt/dg_echo.c
        rtt/dg_send_recv.c
        rtt/dg_send_recv.lc
        rtt/Makefile
        rtt/rtt.out.kumba.1
        rtt/rtt.out.kumba.2
        rtt/rtt.out.vangogh.1
        rtt/rtt.out.vangogh.2
        rtt/rtt.vals.kumba.1
        rtt/rtt.vals.vangogh.1
        rtt/udpcli01.c
        rtt/unprtt.h
        sctp/Makefile
        sctp/sctp_addr_to_associd.c
        sctp/sctp_addr_to_associd.lc
        sctp/sctp_bindargs.c
        sctp/sctp_bindargs.lc
        sctp/sctp_check_notify.c
        sctp/sctp_check_notify.lc
        sctp/sctp_displayevents.c
        sctp/sctp_displayevents.lc
        sctp/sctp_getnostrm.c
        sctp/sctp_modify_hb.c
        sctp/sctp_modify_hb.lc
        sctp/sctp_pdapircv.c
        sctp/sctp_pdapircv.lc
        sctp/sctp_print_addrs.c
        sctp/sctp_print_addrs.lc
        sctp/sctp_strcli.c
        sctp/sctp_strcli.lc
        sctp/sctp_strcli1.c
        sctp/sctp_strcli1.lc
        sctp/sctp_strcli_un.c
        sctp/sctp_strcli_un.lc
        sctp/sctp_strcliecho.c
        sctp/sctp_strcliecho.lc
        sctp/sctp_strcliecho2.c
        sctp/sctp_strcliecho2.lc
        sctp/sctp_wrapper.c
        sctp/sctpclient01.c
        sctp/sctpclient01.lc
        sctp/sctpclient02.c
        sctp/sctpclient02.lc
        sctp/sctpclient04.c
        sctp/sctpclient04.lc
        sctp/sctpserv01.c
        sctp/sctpserv01.lc
        sctp/sctpserv02.c
        sctp/sctpserv02.lc
        sctp/sctpserv03.c
        sctp/sctpserv03.lc
        sctp/sctpserv04.c
        sctp/sctpserv04.lc
        sctp/sctpserv05.c
        sctp/sctpserv05.lc
        sctp/sctpserv06.c
        sctp/sctpserv06.lc
        sctp/sctpserv07.c
        sctp/sctpserv07.lc
        sctp/sctpserv_fork.c
        sctp/sctpserv_fork.lc
        sctp/unp.h
        select/Makefile
        select/strcliselect01.c
        select/strcliselect02.c
        select/strcliselect02.lc
        select/tcpcli01.c
        select/tcpcli02.c
        select/tcpcli03.c
        server/child.h
        server/child.lh
        server/child02.c
        server/child02.lc
        server/child02l.c
        server/child02m.c
        server/child03.c
        server/child03m.c
        server/child04.c
        server/child05.c
        server/child05.lc
        server/client.c
        server/clientrst.c
        server/lock_fcntl.c
        server/lock_fcntl.lc
        server/lock_pthread.c
        server/lock_pthread.lc
        server/Makefile
        server/meter.c
        server/pr_cpu_time.c
        server/pthread07.c
        server/pthread07.h
        server/pthread07.lc
        server/pthread08.c
        server/pthread08.h
        server/pthread08.lc
        server/pthread09.c
        server/pthread09.h
        server/readline.c
        server/readline_r.c
        server/readline_r.h
        server/serv00.c
        server/serv01.c
        server/serv01.lc
        server/serv02.c
        server/serv02.lc
        server/serv02m.c
        server/serv03.c
        server/serv03m.c
        server/serv04.c
        server/serv05.c
        server/serv05.lc
        server/serv06.c
        server/serv06.lc
        server/serv07.c
        server/serv07.lc
        server/serv08.c
        server/serv08.lc
        server/serv09.c
        server/sig_chld_waitpid.c
        server/unpthread.h
        server/web_child.c
        server/web_child_r.c
        sigio/dgcli01.c
        sigio/dgecho01.c
        sigio/dgecho01.lc
        sigio/Makefile
        sigio/script.1
        sigio/script.2
        sigio/udpcli01.c
        sigio/udpserv01.c
        sock/buffers.c
        sock/cliopen.c
        sock/crlf.c
        sock/error.c
        sock/loop.c
        sock/looptcp.c
        sock/loopudp.c
        sock/main.c
        sock/Makefile
        sock/multicast.c
        sock/ourhdr.h
        sock/pattern.c
        sock/README
        sock/servopen.c
        sock/sinktcp.c
        sock/sinkudp.c
        sock/sleepus.c
        sock/sock.h
        sock/sock.in
        sock/sockopts.c
        sock/sourceroute.c
        sock/sourcesink.c
        sock/sourcetcp.c
        sock/sourceudp.c
        sock/strerror.c
        sock/tellwait.c
        sock/TODO
        sock/write.c
        sock/writen.c
        sockopt/checkopts.c
        sockopt/checkopts.lc
        sockopt/Makefile
        sockopt/prdefaults.c
        sockopt/rcvbuf.c
        sockopt/rcvbufset.c
        sockopt/sockopt.c
        sparc64-unknown-freebsd5.1/config.h
        ssntp/main.c
        ssntp/main.lc
        ssntp/Makefile
        ssntp/ntp.h
        ssntp/sntp.h
        ssntp/sntp_proc.c
        streams/stream_dg/client.c
        streams/stream_dg/Makefile
        streams/stream_dg/net_stream.c
        streams/stream_dg/server.c
        streams/Makefile
        streams/strlist_sock.c
        streams/strlist_xti.c
        streams/tpi_bind.c
        streams/tpi_close.c
        streams/tpi_close.lc
        streams/tpi_connect.c
        streams/tpi_connect.lc
        streams/tpi_daytime.c
        streams/tpi_daytime.h
        streams/tpi_read.c
        streams/tpi_read.lc
        streams/unpxti.h
        tcpcliserv/Makefile
        tcpcliserv/sigchldwait.c
        tcpcliserv/sigchldwait.lc
        tcpcliserv/sigchldwaitpid.c
        tcpcliserv/sigchldwaitpid.lc
        tcpcliserv/str_cli08.c
        tcpcliserv/str_cli09.c
        tcpcliserv/str_cli11.c
        tcpcliserv/str_cli11.lc
        tcpcliserv/str_echo08.c
        tcpcliserv/str_echo08.lc
        tcpcliserv/str_echo09.c
        tcpcliserv/sum.h
        tcpcliserv/tcpcli01.c
        tcpcliserv/tcpcli01.lc
        tcpcliserv/tcpcli04.c
        tcpcliserv/tcpcli05.c
        tcpcliserv/tcpcli06.c
        tcpcliserv/tcpcli07.c
        tcpcliserv/tcpcli08.c
        tcpcliserv/tcpcli09.c
        tcpcliserv/tcpcli10.c
        tcpcliserv/tcpcli11.c
        tcpcliserv/tcpserv01.c
        tcpcliserv/tcpserv01.lc
        tcpcliserv/tcpserv02.c
        tcpcliserv/tcpserv03.c
        tcpcliserv/tcpserv04.c
        tcpcliserv/tcpserv04.lc
        tcpcliserv/tcpserv08.c
        tcpcliserv/tcpserv09.c
        tcpcliserv/tcpservpoll01.c
        tcpcliserv/tcpservpoll01.lc
        tcpcliserv/tcpservselect01.c
        tcpcliserv/tcpservselect01.lc
        tcpcliserv/tsigpipe.c
        test/accept_eintr.c
        test/funcs.c
        test/Makefile
        test/readline.h
        test/readline1.c
        test/readline1.lc
        test/readline2.c
        test/readline3.c
        test/test.h
        test/test1.c
        test/test2.c
        test/tisfdtype.c
        test/treadline1.c
        test/treadline2.c
        test/treadline3.c
        test/tshutdown.c
        test/tsnprintf.c
        threads/doit.1
        threads/doit.2
        threads/example01.c
        threads/example01.lc
        threads/example02.c
        threads/example02.lc
        threads/example03.c
        threads/Makefile
        threads/readline.c
        threads/readline.lc
        threads/script.example01
        threads/script.example02
        threads/strclithread.c
        threads/strclithread.lc
        threads/strclithread2.c
        threads/tcpcli01.c
        threads/tcpcli02.c
        threads/tcpserv01.c
        threads/tcpserv02.c
        threads/test01.c
        threads/test02.c
        threads/test03.c
        threads/test04.c
        threads/test05.c
        threads/unpthread.h
        threads/web01.c
        threads/web01.lc
        threads/web02.c
        threads/web03.c
        threads/web03.lc
        traceroute/icmpcode_v4.c
        traceroute/icmpcode_v6.c
        traceroute/main.c
        traceroute/main.lc
        traceroute/Makefile
        traceroute/recv_v4.c
        traceroute/recv_v4.lc
        traceroute/recv_v6.c
        traceroute/recv_v6.lc
        traceroute/sig_alrm.c
        traceroute/trace.h
        traceroute/trace.lh
        traceroute/traceloop.c
        traceroute/traceloop.lc
        traceroute/tv_sub.c
        udpcksum/cleanup.c
        udpcksum/cleanup.lc
        udpcksum/main.c
        udpcksum/main.lc
        udpcksum/Makefile
        udpcksum/pcap.c
        udpcksum/pcap.lc
        udpcksum/senddnsquery-libnet.c
        udpcksum/senddnsquery-libnet.lc
        udpcksum/senddnsquery-raw.c
        udpcksum/senddnsquery-raw.lc
        udpcksum/udpcksum.c
        udpcksum/udpcksum.h
        udpcksum/udpcksum.lc
        udpcksum/udpread.c
        udpcksum/udpread.c.bad
        udpcksum/udpread.lc
        udpcksum/udpwrite.c
        udpcksum/udpwrite.lc
        udpcliserv/dgcliaddr.c
        udpcliserv/dgclibig.c
        udpcliserv/dgclibig.lc
        udpcliserv/dgcliconnect.c
        udpcliserv/dgcliconnect.lc
        udpcliserv/dgcliinetaddr.c
        udpcliserv/dgcliloop1.c
        udpcliserv/dgcliloop3.c
        udpcliserv/dgecholoop1.c
        udpcliserv/dgecholoop2.c
        udpcliserv/dgecholoop2.lc
        udpcliserv/Makefile
        udpcliserv/sigchldwaitpid.c
        udpcliserv/udpcli01.c
        udpcliserv/udpcli02.c
        udpcliserv/udpcli03.c
        udpcliserv/udpcli04.c
        udpcliserv/udpcli05.c
        udpcliserv/udpcli06.c
        udpcliserv/udpcli08.c
        udpcliserv/udpcli09.c
        udpcliserv/udpcli10.c
        udpcliserv/udpserv01.c
        udpcliserv/udpserv06.c
        udpcliserv/udpserv07.c
        udpcliserv/udpservselect01.c
        udpcliserv/udpservselect01.lc
        unixdomain/daytimetcpcli.c
        unixdomain/daytimetcpsrv2.c
        unixdomain/Makefile
        unixdomain/mycat.c
        unixdomain/mycat.lc
        unixdomain/myopen.c
        unixdomain/openfile.c
        unixdomain/readcred.c
        unixdomain/sigchldwaitpid.c
        unixdomain/strecho.c
        unixdomain/testfcred.c
        unixdomain/tfcred01.c
        unixdomain/unixbind.c
        unixdomain/unixbind.lc
        unixdomain/unixdgcli01.c
        unixdomain/unixdgcli01.lc
        unixdomain/unixdgserv01.c
        unixdomain/unixstrcli01.c
        unixdomain/unixstrserv01.c
        unixdomain/unixstrserv01.lc
        unixdomain/unixstrserv02.c
        aclocal.m4
        config.guess
        config.h
        config.h.in
        config.log
        config.status
        config.sub
        configure
        configure.in
        DISCLAIMER
        install-sh
        libunp.a
        Make.defines
        Make.defines.in
        Makefile
        Makefile.in
        README
        VERSION)

add_executable(unpv13e ${SOURCE_FILES})